fixed cart button overlap

--- a/css/style1.css
+++ b/css/style1.css
@@ -43,6 +43,7 @@ button {
 	position: fixed;
 	top: 10px;
 	right: 10px;
+	z-index: 3;
 }
 
 #showCart:hover {
